--- a/base/templates/editland.html
+++ b/base/templates/editland.html
@@ -124,7 +124,7 @@
     <!-- Content goes here -->
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            {% for j_key, j_value in json_data.items() %}
+            {% for j_key, j_value in json_data %}
                 <button class="nav-link" id="v-pills-{{ j_key }}-tab" data-bs-toggle="pill"
                         data-bs-target="#v-pills-{{ j_key }}" type="button" role="tab"
                         aria-controls="v-pills-{{ j_key }}" aria-selected="false">
@@ -136,7 +136,7 @@
         </div>
 
         <div class="tab-content" id="v-pills-tabContent">
-            {% for j_key, j_value in json_data.items() %}
+            {% for j_key, j_value in json_data %}
                 <div class="tab-pane fade" id="v-pills-{{ j_key }}" role="tabpanel"
                      aria-labelledby="v-pills-{{ j_key }}-tab">
                     {% for item in j_value %}
@@ -152,7 +152,7 @@
 							<label>Ссылка XML</label>
               <p><a href="{{ item.url }}/export?format=xlsx&gid=2077348259">{{ item.url }}/export?format=xlsx&gid=2077348259</a></p>
 							<label>
-								{% if item.active=="1": %}
+								{% if item.active == "1" %}
 								<input type="checkbox"  name="active" value="1" checked> Активная таблица</label><br>
 							{% else %}
 								<input type="checkbox" name="active" value="0"> Активная таблица</label><br>
