--- a/base/templates/landing.html
+++ b/base/templates/landing.html
@@ -43,7 +43,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					{% for j_key, j_value in json_data.items() %}
+					{% for j_key, j_value in json_data %}
                         <li class="nav-item">
                             <a class="nav-link" href="#{{ j_key }}">{{ j_value[0].short_title }}</a>
                         </li>
