--- a/base/templates/auth/login.html
+++ b/base/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "auth/auth-layout.html" %}
+{% extends "auth/layout.html" %}
 {% block title %} Login {% endblock %}
 {% block content %}
     <div class="col-md-6">
