--- a/base/templates/admin/layout.html
+++ b/base/templates/admin/layout.html
@@ -5,7 +5,7 @@
         <a class="nav-link" href="{% url 'home' %}">Главная</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin.profile' %}">Профиль</a>
+        <a class="nav-link" href="{% url 'user.profile' %}">Профиль</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'admin.projects' %}">Мои проекты</a>
