--- a/base/templates/user/profile.html
+++ b/base/templates/user/profile.html
@@ -35,7 +35,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="profession">Компания</label>
+                                <label for="profession">Сфера деятельности</label>
                                 <br>
                                 <select class="form-select" name="profession" aria-label="" style="border: none">
                                     <option selected>{{ user.profession }}</option>
