--- a/base/templates/admin/layout.html
+++ b/base/templates/admin/layout.html
@@ -8,7 +8,7 @@
         <a class="nav-link" href="{% url 'user.profile' %}">Профиль</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'admin.projects' %}">Мои проекты</a>
+        <a class="nav-link" href="{% url 'user.projects' %}">Мои проекты</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'admin.faq' %}">FAQ</a>
