--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -57,6 +57,7 @@
     </style>
 </head>
 <body>
+    {% load static %}
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
