--- a/base/templates/user/home.html
+++ b/base/templates/user/home.html
@@ -9,7 +9,16 @@
                     <div class="card-body">
                         {% if user.tariff is None %}
                             No tariff
-                        {% endif  %}
+                        {% else %}
+                            <h5>{{ user.tariff.name }}</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><small>price: </small>{{ user.tariff.price }}</li>
+                                <li class="list-group-item"><small>duration: </small>{{ user.tariff.duration }}</li>
+                                <li class="list-group-item"><small>adverts_count: </small>{{ user.tariff.adverts_count }}</li>
+                            </ul>
+                        {% endif %}
+                        <br>
+                        <a href="{% url 'user.tariffs' %}" class="btn btn-success" style="width: 30%; margin-left: 30%">Change</a>
                     </div>
                 </div>
             </div>
@@ -23,10 +32,22 @@
                             </div>
                         </div>
                     {% else %}
+                        {% load static %}
                         {% for project in user.projects %}
-                            <div class="col-md-6">
-                                <div class="card">
-                                    <div class="card-body">{{ project.name }}</div>
+                            <div class="col-md-5">
+                                <div class="card" style="margin-bottom: 25px">
+                                    {% if project.is_active %}
+                                        <img src="{% static 'img/active.png' %}" alt="active-img" width="150"
+                                             style="margin-left: 25%">
+                                    {% else %}
+                                        <img src="{% static 'img/inactive.png' %}" alt="inactive-img" width="150"
+                                             style="margin-left: 25%">
+                                    {% endif %}
+                                    <div class="card-body">
+                                        <h5>
+                                            {{ project.name }}
+                                        </h5>
+                                    </div>
                                 </div>
                             </div>
                         {% endfor %}
