admin-panel-projects-list

--- a/base/templates/admin/layout.html
+++ b/base/templates/admin/layout.html
@@ -10,6 +10,9 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'user.projects' %}">Мои проекты</a>
     </li>
+    <li>
+        <a class="nav-link" href="{% url 'admin.user_projects' %}">Проекты пользователей</a>
+    </li>
     <li class="nav-item">
         <a class="nav-link" href="{% url 'admin.faq' %}">FAQ</a>
     </li>
