--- a/base/templates/layout.html
+++ b/base/templates/layout.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Home{% endblock %}</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         /* Ваши стили для бокового меню */
         #sidebarMenu {
@@ -38,18 +39,20 @@
         .nav-item {
             margin-bottom: 5px;
         }
-      .navbar-brand {
-        margin-left: 15px;
-      }
-      .me-3 {
-        color: white;
-      }
 
-      .custom-btn {
-        color: white;
-      }
+        .navbar-brand {
+            margin-left: 15px;
+        }
 
-      .custom-btn:hover {
+        .me-3 {
+            color: white;
+        }
+
+        .custom-btn {
+            color: white;
+        }
+
+        .custom-btn:hover {
             background: #bbff34;
             color: black;
         }
@@ -57,42 +60,57 @@
     </style>
 </head>
 <body>
-    {% load static %}
-    <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="https://s3.timeweb.com/31bc88b6-iks/image(НЕ ТРОГАТЬ)/Лого.png" alt="Логотип" width="60"></a>
-            <div class="d-flex align-items-center">
-                <span class="me-3">Привет, {{ user.username }}</span>
-
-                <a href="{% url 'user.create_project' %}" class="custom-btn btn btn-outline-secondary me-2">+ Новый проект</a>
-                <a href="{% url 'logout' %}" class="custom-btn btn btn-outline-secondary">Выход</a>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Admin Panel Layout -->
+{% load static %}
+<!-- Header -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <div class="row">
-            <!-- Sidebar Menu -->
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="position-sticky pt-3">
-                    <ul class="nav flex-column">
-                        {% block navbar %}{% endblock %}
-                    </ul>
-                </div>
-            </nav>
+        <a class="navbar-brand" href="#"><img src="https://s3.timeweb.com/31bc88b6-iks/image(НЕ ТРОГАТЬ)/Лого.png"
+                                              alt="Логотип" width="60"></a>
+        <div class="d-flex align-items-center">
+            <span class="me-3">Привет, {{ user.username }}</span>
 
-            <!-- Main Content -->
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    {% block content %}{% endblock %}
-                </div>
-            </main>
+            <a href="{% url 'user.create_project' %}" class="custom-btn btn btn-outline-secondary me-2">+ Новый
+                проект</a>
+            <a href="{% url 'logout' %}" class="custom-btn btn btn-outline-secondary">Выход</a>
         </div>
     </div>
+</nav>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<!-- Admin Panel Layout -->
+<div class="container-fluid">
+    <div class="row">
+        <!-- Sidebar Menu -->
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <div class="position-sticky pt-3">
+                <ul class="nav flex-column">
+                    {% block navbar %}{% endblock %}
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Main Content -->
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            {% if messages %}
+                {% for msg in messages %}
+                    <div class="alert alert-{{ msg.tags }} alert-dismissable d-flex" style="justify-content: space-between; align-items: center">
+                    <p class="d-flex" style="margin-top: 10px">{{ msg.message }}</p>
+                        <button type="button" class="btn close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                {% block content %}{% endblock %}
+            </div>
+        </main>
+    </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
